# motisTraffic-Day-CSA

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .oclint  CMakeLists.txt  Main.elm  Port.elm  README.md  STYLE.md  build.gradle  elm-package.json  fkjdsfdshflksdfh.txt  index.html  make_and_run_tests  map.js  queries.txt
Widgets/: Map.elm  (+12 more)
base/bootstrap/: CMakeLists.txt
base/bootstrap/src/: dataset_settings.cc  module_settings.cc  motis_instance.cc
base/client/: CMakeLists.txt
base/client/src/: main.cc  motis_con.cc
base/eval/: CMakeLists.txt
base/launcher/: CMakeLists.txt
base/launcher/src/: batch_mode.cc  http_server.cc  launcher_settings.cc  listener_settings.cc  main.cc  socket_server.cc  ws_server.cc
base/loader/: CMakeLists.txt
base/loader/schedule-format/: Category.fbs  Interval.fbs  Platform.fbs  Provider.fbs  RuleService.fbs  Schedule.fbs  Service.fbs  Station.fbs  Timezone.fbs
base/loader/src/: build_footpaths.cc  duplicate_checker.cc  graph_builder.cc  loader.cc  loader_options.cc  rule_service_graph_builder.cc  timezone_util.cc  util.cc  wzr_loader.cc
base/loader/test/: graph_builder_test.cc  util_test.cc  wzr_loader_test.cc
base/module/: CMakeLists.txt
base/module/src/: dispatcher.cc  message.cc
base/module/test/: container_test.cc  register_op_test.cc
modules/address/: CMakeLists.txt
modules/address/src/: address.cc
modules/bikesharing/: CMakeLists.txt
modules/bikesharing/dbschema/: Terminal.fbs
modules/bikesharing/src/: bikesharing.cc  bikesharing_search.cc  database.cc  find_connections.cc  geo_index.cc  geo_terminals.cc  nextbike_initializer.cc  nextbike_parser.cc  search.cc  terminal.cc
modules/bikesharing/test/: nextbike_initializer_test.cc  nextbike_itest.cc  nextbike_parser_test.cc  terminal_test.cc
modules/cc/: CMakeLists.txt
modules/cc/src/: cc.cc
modules/cc/test/: cc_itest.cc  cc_test.cc  schedule.h
modules/connectionchecker/: CMakeLists.txt
modules/connectionchecker/src/: connectionchecker.cc
modules/connectionchecker/test/: connectionchecker_itest.cc  connectionchecker_test.cc
modules/geo_collector/: CMakeLists.txt
modules/geo_collector/src/: geo_collector.cc
modules/guesser/: CMakeLists.txt
modules/guesser/src/: guesser.cc
modules/intermodal/: CMakeLists.txt
modules/intermodal/src/: intermodal.cc  mumo_edge.cc  query_bounds.cc  station_geo_index.cc
modules/intermodal/test/: intermodal_itest.cc
modules/lookup/: CMakeLists.txt
modules/lookup/src/: lookup.cc  lookup_geo_station.cc  lookup_id_train.cc  lookup_meta_station.cc  lookup_station_events.cc  station_geo_index.cc
modules/lookup/test/: id_train_itest.cc  lookup_station_events_itest.cc  meta_station_itest.cc  station_events_itest.cc
modules/osrm/: CMakeLists.txt
modules/osrm/src/: osrm.cc  ref.cc  router.cc
modules/path/: CMakeLists.txt
modules/path/src/: lookup_index.cc  path.cc  prepare.cc
modules/path/test/: integration_test.cc
modules/railviz/: CMakeLists.txt
modules/railviz/src/: context.cc  context_manager.cc  date_converter.cc  edge_geo_index.cc  geometry.cc  mercator.cc  path_resolver.cc  railviz.cc  realtime_response.cc  timetable_reciever.cc  timetable_retriever.cc  train_query.cc  train_retriever.cc  webclient.cc  webclient_context.cc  webclient_context_manager.cc  webclient_manager.cc
modules/railviz/test/: DEPRECATED_nodechecks.cc_old  DEPRECATED_test_date_converter.cc_old  date_converter_test.cc  exampla_test_module.cc  get_station_test.cc  get_trains_test.cc  get_trip_guesses_test.cc  main.cc  nodechecks.cc  schedule.h  test_date_converter.cc  test_module.cc  test_timetable.cc  test_train_query.cc  test_train_retriever.cc  timetable_retriever_test.cc  train_retriever_test.cc
modules/realtime/: CMakeLists.txt  README.md
modules/realtime/old/: database.cc  delay_info.cc  delay_info.h  delay_propagator.cc  event.h  graph_updater.h  message_classes.cc  message_classes.h  message_fetcher.cc  message_fetcher.h  message_handler.h  message_output.h  message_reader.h  realtime.cc  realtime.h  realtime_schedule.cc  tracking.h  waiting_edges.cc
modules/realtime/src/: database.cc  delay_info.cc  delay_info_manager.cc  delay_propagator.cc  graph_updater.cc  message_classes.cc  message_fetcher.cc  message_handler.cc  message_output.cc  message_reader.cc  message_stream.cc  modified_train.cc  opt_time.cc  realtime.cc  realtime.cc.old  realtime_schedule.cc  statistics.cc  tracking.cc  waiting_edges.cc
modules/realtime/test/: delay_itest.cc  delay_test.cc  main.cc  test_schedule.h  train_messages_itest.cc  train_messages_test.cc  waiting_edges_test.cc
modules/reliability/: CMakeLists.txt
modules/reliability/eval/: main.cc
modules/reliability/resources/: hotels.csv
modules/reliability/src/: calc_arrival_distribution.cc  calc_departure_distribution.cc  db_distributions.cc  db_distributions_loader.cc  distributions_calculator.cc  distributions_loader.cc  pd_calc_data.cc  pd_calc_data_arrival.cc  pd_calc_data_departure.cc  probability_distribution.cc  reliability.cc  train_distributions_calculator.cc  tt_distributions_manager.cc
modules/reliability/test/: db_distributions_test.cc  distributions_container_test.cc  distributions_loader_test.cc  graph_accessor_test.cc  main.cc  probability_distribution_test.cc  reliability_itest.cc  reliability_test.cc  test_calc_arrival_distribution.cc  test_calc_departure_distribution.cc  test_db_distributions.cc  test_distributions_calculator.cc  test_distributions_container.cc  test_distributions_loader.cc  test_graph_accessor.cc  test_module.cc  test_pd_calc_data.cc  test_pd_calc_data_arrival.cc  test_pd_calc_data_departure.cc  test_probability_distribution.cc  test_reliability.cc  test_train_distributions_calculator.cc  (+1 more)
modules/ris/: CMakeLists.txt
modules/routes/: CMakeLists.txt
modules/routing/: CMakeLists.txt
modules/rt/: CMakeLists.txt
modules/user/: CMakeLists.txt
motis/core/: CMakeLists.txt
motis/launcher/: CMakeLists.txt  modules.h.in
motis/loader/: CMakeLists.txt
motis/module/: CMakeLists.txt
motis/prep/: CMakeLists.txt
(+2612 files in other folders)
